--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mocreac",
   "version": "1.0.0",
-  "description": "<!-- **mocreac/mocreac** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.",
+  "description": "Mocreac George - Designer -> Branding | Product Design",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
